update package_data in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,32 @@ docs =
     sphinx-astropy
 
 [options.package_data]
-specreduce-data = data/*
+specreduce-data =
+    reference_data/*
+    reference_data/line_lists/*
+    reference_data/line_lists/iraf/*
+    reference_data/line_lists/iraf/air/*
+    reference_data/line_lists/iraf/vacuum/*
+    reference_data/onedstds/*
+    reference_data/onedstds/bstdscal/*
+    reference_data/onedstds/ctio/*
+    reference_data/onedstds/ctiocal/*
+    reference_data/onedstds/ctionewcal/*
+    reference_data/onedstds/iidscal/*
+    reference_data/onedstds/irscal/*
+    reference_data/onedstds/oke1990/*
+    reference_data/onedstds/redcal/*
+    reference_data/onedstds/spec16cal/*
+    reference_data/onedstds/spec50cal/*
+    reference_data/onedstds/spechayescal/*
+    reference_data/onedstds/snfactory/*
+    reference_data/onedstds/gemini/*
+    reference_data/onedstds/eso/*
+    reference_data/onedstds/eso/Xshooter/*
+    reference_data/onedstds/eso/ctiostan/*
+    reference_data/onedstds/eso/hststan/*
+    reference_data/onedstds/eso/okestan/*
+    reference_data/onedstds/eso/wdstan/*
 
 [tool:pytest]
 testpaths = "specreduce-data" "docs"
