add extinction directory to package_data

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ docs =
 [options.package_data]
 specreduce-data =
     reference_data/*
+    reference_data/extinction/*
     reference_data/line_lists/*
     reference_data/line_lists/iraf/*
     reference_data/line_lists/iraf/air/*
