--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,10 @@ setup_requires = setuptools_scm
 install_requires =
     astropy
 
-
 [options.extras_require]
 test =
+    coverage
+    pytest-cov
     pytest-astropy
 docs =
     sphinx-astropy
