--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,10 +4,11 @@ include setup.cfg
 include LICENSE.rst
 include pyproject.toml
 
-recursive-include specreduce-data *.pyx *.c *.pxd
+recursive-include specreduce_data *.pyx *.c *.pxd
 recursive-include docs *
 recursive-include licenses *
 recursive-include scripts *
+recursive-include specreduce_data/reference_data *
 
 prune build
 prune docs/_build
